# Z-SSMNet

./: .gitattributes  .gitignore  README.md  requirements.txt  setup.cfg  setup.py  ssl.md  z-nnmnet.md  zonal_segmentation.md
src/z_ssmnet/: __init__.py  prepare_data.py  prepare_data_semi_supervised.py
src/z_ssmnet/splits/: __init__.py
src/z_ssmnet/splits/picai/: __main__.py
src/z_ssmnet/splits/picai_nnunet/: __init__.py  __main__.py
src/z_ssmnet/ssl/: LICENSE  data_preprocessing_zonal.py  infinite_generator_3D_picai_zonal.py
src/z_ssmnet/ssl/pretrain/: MNet.py  MNet_basic_module.py  config_zonal.py  ssl_mnet_zonal.py  utils.py
src/z_ssmnet/ssl_read_data_from_disk/: data_preprocessing_zonal.py  ssl_.md
src/z_ssmnet/ssl_read_data_from_disk/pretrain/: MNet.py  config_zonal.py  ssl_mnet_zonal.py  utils.py
src/z_ssmnet/training/: preprocess.py  train_ssl.py  train_z_ssmnet.py
src/z_ssmnet/z_nnmnet/: eval.py  eval_zonal.py  softmax_export.py  zonal_mask_npz.py
src/z_ssmnet/z_nnmnet/training_docker/: Dockerfile  MNet.py  MNet_myTrainer_zonal.py  build.sh  dataset_loading.py  export.sh  nnUNetTrainer.py  nnunet_wrapper.py  predict.py  run_training.py
src/z_ssmnet/zonal_segmentation/: data_preparation.py  zonal_mask_postprocessing.py
src/z_ssmnet/zonal_segmentation_gc/: Dockerfile  README.md  build.sh  export.sh  process.py  test.sh
