[metadata]
name = z_ssmnet
description = A Zonal-aware Self-supervised Mesh Network for Clinically Significant Prostate Cancer Detection and Diagnosis in bpMRI
author = Yuan Yuan
license = Apache License, Version 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    z_ssmnet
install_requires =
    numpy
    tqdm
    SimpleITK
    scipy
    scikit-learn
    picai_prep>=2.0.1
    picai_eval>=1.4.1

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
z_ssmnet = py.typed

[flake8]
max-line-length = 160
